# noob-cli

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  PLAN.md  README.md  compose.yml  contract.md  dev.sh  install.sh  session
config/: .env.example  contract.md  mcp.websearch.example.json
config/skills/web-search/: SKILL.md
crates/: contract.md
crates/noob/: Cargo.toml  contract.md
crates/noob-provider/: Cargo.toml  contract.md
crates/noob-provider/src/: assemble.rs  chat.rs  envfile.rs  http.rs  lib.rs  responses.rs  sse.rs  types.rs
crates/noob-provider/testdata/: contract.md
crates/noob-provider/testdata/sse/: llamacpp-qwen-parallel.sse  llamacpp-qwen-toolcall.sse  llamacpp-responses-toolcall.sse  openrouter-keepalive-error.sse
crates/noob-provider/tests/: fixtures.rs  hot_env.rs  live_smoke.rs  streaming.rs  watchdog.rs
crates/noob-testkit/: Cargo.toml  contract.md
crates/noob-testkit/src/: lib.rs  mcp.rs
crates/noob/prompts/: base.md  compact.md  contract.md
crates/noob/src/: doctor.rs  main.rs
crates/noob/src/agent/: agents.rs  compact.rs  contract.md  mod.rs  prompt.rs  sched.rs
crates/noob/src/config/: contract.md  mod.rs
crates/noob/src/mcp/: config.rs  contract.md  http.rs  mod.rs  proto.rs  schema.rs  stdio.rs
crates/noob/src/session/: contract.md  mod.rs
crates/noob/src/skills/: contract.md  mod.rs
crates/noob/src/subagent/: background.rs  contract.md  mod.rs
crates/noob/src/task/: contract.md  mod.rs
crates/noob/src/tools/: bash.rs  context.rs  contract.md  edit.rs  glob.rs  grep.rs  guard.rs  ls.rs  mcp.rs  mod.rs  read.rs  skill.rs  todo.rs  truncate.rs  write.rs
crates/noob/src/ui/: commands.rs  contract.md  dock.rs  markdown.rs  mod.rs  prompt.rs  scanner.rs  style.rs  table.rs  theme.rs
crates/noob/tests/: budget.rs  contract.md  e2e_p0.rs  e2e_p2.rs  e2e_p3.rs  e2e_p4.rs  e2e_p5.rs  e2e_p6.rs  e2e_p7.rs  e2e_todo.rs  e2e_ui.rs  egress.rs  install_bundle.rs  live_p2.rs  live_p3.rs  live_p4.rs  session_recovery.rs  vt.rs
docker/: Dockerfile  contract.md
docs/: RESEARCH.md  UI_PLAN.md  contract.md
docs/prompt-samples/: qbert.md  snake.md  tetris.md
scripts/: noob
