[package]
name = "noob-provider"
description = "Transcript in, events out. Speaks both OpenAI wire shapes. Sole owner of ureq."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ureq.workspace = true
serde_json.workspace = true

[dev-dependencies]
noob-testkit.workspace = true
tempfile.workspace = true
