[package]
name = "noob"
description = "An extremely lightweight, friendly agentic CLI built to live inside a Docker sandbox."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
noob-provider.workspace = true
serde_json.workspace = true
libc.workspace = true
regex.workspace = true
ignore.workspace = true

[dev-dependencies]
noob-testkit.workspace = true
tempfile.workspace = true
tiktoken-rs.workspace = true
